Removed pictures on load

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <figure class="choice">
             <img
               class="choice__image user-choice"
-              src="images/rock.jpg"
+              src=""
               alt=""
             />
             <figcaption class="image__caption">
@@ -74,7 +74,7 @@
           <figure class="choice">
             <img
               class="choice__image enemy-choice"
-              src="images/paper.jpg"
+              src=""
               alt=""
             />
             <figcaption class="image__caption enemy-caption">Enemy</figcaption>
