Changed on load picture to white instead of empty

--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
           <!-- USER HEADING -->
           <h3 class="choice-heading">You</h3>
           <figure class="choice">
-            <img
-              class="choice__image user-choice"
-              src=""
-              alt=""
-            />
+            <img class="choice__image user-choice" src="images/white.png" />
             <figcaption class="image__caption">
               <!-- CHOICES FOR THE PLAYER -->
               <input
@@ -72,11 +68,7 @@
           <!-- ENEMY HEADING -->
           <h3 class="choice-heading">Enemy</h3>
           <figure class="choice">
-            <img
-              class="choice__image enemy-choice"
-              src=""
-              alt=""
-            />
+            <img class="choice__image enemy-choice" src="images/white.png" />
             <figcaption class="image__caption enemy-caption">Enemy</figcaption>
           </figure>
         </article>
