--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <!-- USER HEADING -->
           <h3 class="choice-heading">You</h3>
           <figure class="choice">
-            <img class="choice__image user-choice" src="images/white.png" />
+            <img class="choice__image user-choice" src="images/rock.jpg" />
             <figcaption class="image__caption">
               <!-- CHOICES FOR THE PLAYER -->
               <input
@@ -68,7 +68,7 @@
           <!-- ENEMY HEADING -->
           <h3 class="choice-heading">Enemy</h3>
           <figure class="choice">
-            <img class="choice__image enemy-choice" src="images/white.png" />
+            <img class="choice__image enemy-choice" />
             <figcaption class="image__caption enemy-caption">Enemy</figcaption>
           </figure>
         </article>
