feat: add images alt and page icon

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-   <!-- MADE BY JOHN CARLO N. CAMARA!!!!! -->
+  <!-- MADE BY JOHN CARLO N. CAMARA!!!!! -->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="icon"
+      href="https://cdn-icons-png.flaticon.com/512/6688/6688580.png"
+    />
   </head>
   <body>
     <!-- HEADER -->
@@ -28,7 +32,11 @@
           <!-- USER HEADING -->
           <h3 class="choice-heading">You</h3>
           <figure class="choice">
-            <img class="choice__image user-choice" src="images/rock.jpg" />
+            <img
+              class="choice__image user-choice"
+              src="images/rock.jpg"
+              alt="image of rock, paper, or scissors"
+            />
             <figcaption class="image__caption">
               <!-- CHOICES FOR THE PLAYER -->
               <input
@@ -68,7 +76,11 @@
           <!-- ENEMY HEADING -->
           <h3 class="choice-heading">Enemy</h3>
           <figure class="choice">
-            <img class="choice__image enemy-choice" />
+            <img
+              class="choice__image enemy-choice"
+              src="images/rock.jpg"
+              alt="image of rock, paper, or scissors"
+            />
             <figcaption class="image__caption enemy-caption">Enemy</figcaption>
           </figure>
         </article>
